[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
rpath = true

[workspace]
members = [
  "sdk-bindings",
  "sdk-common",
  "sdk-core",
  "sdk-macros",
]
resolver = "2"

[workspace.package]
version = "0.6.2"

[workspace.dependencies]
aes = "0.8"
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.86"
base64 = "0.13.0"
bitcoin = "=0.29.2" # Same version as used in gl-client
hex = "0.4"
lightning = "=0.0.118" # Same version as used in gl-client
lightning-invoice = "=0.26.0" # Same version as used in gl-client
log = "0.4"
once_cell = "1"
prost = "^0.11"
regex = "1.8.1"
reqwest = { version = "0.12.13", features = ["json"] }
rusqlite = { version = "0.29", features = [
  "serde_json",
  "bundled",
  "backup",
  "trace",
  "hooks",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.56"
tokio = "1.41"
tonic = "^0.8"
tonic-build = "^0.8"
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
