[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
rpath = true

[workspace]
members = [
  "sdk-bindings",
  "sdk-common",
  "sdk-core",
  "sdk-macros",
]
resolver = "2"

[workspace.package]
version = "0.7.1"

[workspace.lints.clippy]
empty_line_after_doc_comments = "allow"

[workspace.dependencies]
aes = "0.8"
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.86"
base64 = "0.13.0"
bitcoin = "=0.30.2" # Same version as used in gl-client
env_logger = "0.10"
hex = "0.4"
lightning = "=0.0.123" # Same version as used in gl-client
lightning-invoice = "=0.31.0" # Same version as used in gl-client
log = "0.4"
once_cell = "1"
prost = "^0.12"
regex = "1.8.1"
# Pin reqwest until https://github.com/seanmonstar/reqwest/issues/2719 is solved
reqwest = { version = "=0.12.18", features = ["json"] }
rusqlite = { version = "0.31", features = [
  "serde_json",
  "bundled",
  "backup",
  "trace",
  "hooks",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.56"
tokio = "^1.43"
tonic = "^0.11"
tonic-build = "^0.11"
