[package]
name = "breez_sdk"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "breez_sdk_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
breez-sdk-core = { path = "../sdk-core" }
sdk-common = { path = "../sdk-common" }
thiserror = { workspace = true }
tokio = { workspace = true }
uniffi = { version = "0.23.0", features = ["bindgen-tests", "cli"] }
uniffi_bindgen = "0.23.0"
uniffi_macros = "0.23.0"
uniffi-kotlin-multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "bf48c5fcb153856e3055025a3cbfa56fbf213188" }
camino = "1.1.1"
log = { workspace = true }
once_cell = { workspace = true }
flutter_rust_bridge = { workspace = true }
tiny-bip39 = "*"
tonic = { workspace = true, features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
uniffi_build = { version = "0.23.0" }
uniffi_bindgen = "0.23.0"
anyhow = { workspace = true }
glob = "0.3.1"
