[package]
name = "breez_sdk"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "breez_sdk_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["uniffi-28"]
uniffi-25 = ["uniffi_25", "uniffi_bindgen_25", "uniffi_bindgen_kotlin_multiplatform"]
uniffi-28 = ["uniffi_28", "uniffi_bindgen_28"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
breez-sdk-core = { path = "../sdk-core" }
sdk-common = { path = "../sdk-common" }
thiserror = { workspace = true }
tokio = { workspace = true }
uniffi_25 = { package = "uniffi", version = "0.25.2", features = [ "bindgen-tests", "cli" ], optional = true }
uniffi_28 = { package = "uniffi", version = "0.28.0", features = [ "bindgen-tests", "cli" ], optional = true }
uniffi_bindgen_25 = { package = "uniffi_bindgen", version = "0.25.2", optional = true }
uniffi_bindgen_28 = { package = "uniffi_bindgen", version = "0.28.0", optional = true }
uniffi_bindgen_kotlin_multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "e8e3a88df5b657787c1198425c16008232b26548", optional = true }
camino = "1.1.1"
log = { workspace = true }
once_cell = { workspace = true }
tiny-bip39 = "*"
tonic = { workspace = true, features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
uniffi_25 = { package = "uniffi", version = "0.25.2", features = [ "build" ], optional = true }
uniffi_28 = { package = "uniffi", version = "0.28.0", features = [ "build" ], optional = true }
glob = "0.3.1"