[package]
name = "breez_sdk"
edition = "2021"
version.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "breez_sdk_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
breez-sdk-core = { path = "../sdk-core" }
sdk-common = { path = "../sdk-common" }
env_logger = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uniffi = { package = "uniffi", version = "0.28.0", features = [ "bindgen-tests", "cli" ] }
uniffi_bindgen = { package = "uniffi_bindgen", version = "0.28.0" }
camino = "1.1.1"
log = { workspace = true }
once_cell = { workspace = true }
tiny-bip39 = "*"
tonic = { workspace = true, features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }

[build-dependencies]
uniffi = { package = "uniffi", version = "0.28.0", features = [ "build" ] }
glob = "0.3.1"