[package]
name = "sdk-common"
edition = "2021"
version.workspace = true

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bip21 = "0.2"
bitcoin = { workspace = true }
cbc = { version = "0.1", features = ["std"] }
hex = { workspace = true }
lightning = { workspace = true }
lightning-125 = { package = "lightning", version = "0.0.125", default-features = false, features = ["std"], optional = true }
lightning-invoice = { workspace = true }
log = { workspace = true }
querystring = "1"
prost = "0.12"  # Explicit version instead of workspace
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.10", features = [  # Fixed version with required features
    "tls",
    "transport",
    "tls-roots",
    "tls-webpki-roots",
] }
url = "2.5.0"
elements = { version = "0.25.0", optional = true }
urlencoding = { version = "2.1.3" }
percent-encoding = "2.3.1"
hickory-resolver = { version = "0.24.2", features = ["dnssec-ring"] }
lazy_static = "1.5.0"

[dev-dependencies]
bitcoin = { workspace = true, features = ["rand"] }
mockito = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }  # Match tonic version

[features]
liquid = ["dep:elements", "dep:lightning-125"]
