[package]
name = "breez-sdk-core"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_core"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["greenlight"]
greenlight = ["dep:gl-client"]
# Enable LDK (Lightning Development Kit) node implementation
ldk = ["dep:ldk-node", "dep:vss-client"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
aes = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
gl-client = { git = "https://github.com/Blockstream/greenlight.git", features = [
    "permissive",
], rev = "1dcbc53d10e66e97e8d2550c269e2b130198ad5e", optional = true }
zbase32 = "0.1.2"
base64 = { workspace = true }
bitcoin = { workspace = true, features = ["serde", "rand"] }
chrono = "0.4"
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
env_logger = { workspace = true }
futures = "0.3.30"
rand = "0.8"
tiny-bip39 = "1"
tokio = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = "1.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdk-common = { path = "../sdk-common" }
tonic = { workspace = true, features = [
    "tls",
    "transport",
    "tls-roots",
    "tls-webpki-roots",
] }
lazy_static = "^1.4.0"
log = { workspace = true }
once_cell = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06"}
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
const_format = "0.2"
miniz_oxide = "0.7.1"
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde_with = "3.3.0"
regex = { workspace = true }
ryu = "1.0.18"
# Waiting for features to to be released:
# - "Introduce Runtime object allowng to detect outer runtime context"
#    https://github.com/lightningdevkit/ldk-node/pull/543
# - "Add receive_via_jit_channel_for_hash() method"
#   https://github.com/lightningdevkit/ldk-node/pull/608
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", rev = "fdaa759f2485189319f5b5b7d046c2b0de281e23", optional = true }
vss-client = { version = "0.3.1", default-features = false, optional = true }

[dev-dependencies]
mockall = "0.13.1"
sdk-common = { path = "../sdk-common", features = ["test-utils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
