[package]
name = "breez-sdk-cli"
version = "0.4.2-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
breez-sdk-core = { path = "../../libs/sdk-core"}
log = "0.4"
once_cell = "1"
qrcode-rs = { version = "0.1", default-features = false }
rustyline = { version = "12", features = ["derive"]}
serde_json = "1.0"
tiny-bip39 = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }